# synapse-sap

./: .gitignore  .gitmodules  .prettierignore  05_SAP.md  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYNAPSE_EXPLORER_GUIDE.md  package.json
.github/: copilot-instructions.md
.github/skills/anchor-architect/: SKILL.md
.github/skills/anchor-zero-copy/: SKILL.md
.github/skills/simplify-before-final/: SKILL.md
.github/workflows/: verify.yml
docs/: 01-architecture.md  02-instructions.md  03-accounts.md  04-events-errors.md  09-staking-required.md  10-payment-tokens.md  README.md  SAP_ESCROW_DISPUTE_SYSTEM.md  SAP_PROTOCOL_PITCH.md  announcement-v0.6.2.md  metaplex-partnership-proposal.md
docs/partnerships/: FAIRSCALE_PARTNERSHIP_PROPOSAL.md  metaplex-partnership-phase1-breakdown.md  metaplex-partnership-proposal.md
idl/: synapse_agent_sap.json
programs/synapse-agent-sap/: Cargo.toml
programs/synapse-agent-sap/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  validator.rs
programs/synapse-agent-sap/src/instructions/: agent.rs  attestation.rs  buffer.rs  digest.rs  dispute.rs  escrow.rs  escrow_v2.rs  feedback.rs  global.rs  index_page.rs  indexing.rs  ledger.rs  memory.rs  migration.rs  mod.rs  plugin.rs  receipt.rs  shards.rs  staking.rs  subscription.rs  tools.rs  vault.rs
scripts/: init-global.js
tests/: 01-lifecycle.ts  02-reputation.ts  03-tools.ts  04-vault-memory.ts  05-escrow.ts  06-attestation.ts  07-indexing.ts  08-ledger.ts  09-security.ts  10-integration.ts  11-v010-hardening.ts  helpers.ts
(+6 files in other folders)
