[package]
name = "synapse-agent-sap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "synapse_agent_sap"

[features]
default = ["no-log-ix-name"]
legacy-memory = []   # Enables plugin, memory, buffer, digest instruction modules
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-sha256-hasher = "2.3"
solana-security-txt = "1.1.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("legacy-memory"))'] }
