[package]
name = "synapse-agent-sap"
version = "1.0.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "synapse_agent_sap"

[features]
default = []
legacy-memory = []   # Enables plugin, memory, buffer, digest instruction modules
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
solana-sha256-hasher = "3.1"
solana-instructions-sysvar = "3.0.0"
solana-sdk-ids = "3.1.0"
solana-security-txt = "1.1.1"
